Fixed post spacing

--- a/public/style/history.css
+++ b/public/style/history.css
@@ -52,6 +52,7 @@ form {
     word-wrap: break-word;
     border: 0.2em solid #ffc107;
     border-radius: 0.2em;
+    padding-bottom: 0.7em!important;
 }
 
 .post div:first-of-type {
